# hashcons

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  hashcons.cabal
Data/: HashCons.hs
Data/HashCons/: Cache.hs  ConstRef.hs  HC.hs  MkWeak.hs  SeqSubterms.hs
Data/HashCons/HC/: Internal.hs
bench/: Expr.hs  bench-space.hs  bench-time.hs
examples/: expr.hs
scripts/ci/steps/: 10-dependencies.sh  20-sdist.sh  30-build.sh  40-test.sh  50-benchmark.sh
src/Data/: HashCons.hs
src/Data/HashCons/: Cache.hs  ConstRef.hs  HC.hs  Memo.hs  MkWeak.hs
src/Data/HashCons/HC/: Internal.hs
test/: TestHashCons.hs  tests.hs
