name: hashcons
version: 0.1.0
category: Caching
synopsis: Hash-consing and memoisation
description:
  Hash-consing (a.k.a. interning) and memoisation, with a mostly-clean
  interface. This library does all the dirty tricks so you don't have to.
license: LGPL-3
license-file: LICENCE.txt

author: Andy Morris <hello@andy-morris.xyz>
maintainer: Andy Morris <hello@andy-morris.xyz>

cabal-version: >= 2.0
build-type: Simple

library
  default-language: Haskell2010
  ghc-options: -Wall
  hs-source-dirs: src
  exposed-modules:
    Data.HashCons,
    Data.HashCons.ConstRef,
    Data.HashCons.HC,
    Data.HashCons.MkWeak
  other-modules:
    Data.HashCons.Cache,
    Data.HashCons.HC.Internal
  build-depends:
    base       ^>= 4.10.1.0,
    hashable   ^>= 1.2.6.1,
    hashtables ^>= 1.2.2.1,
    deepseq    ^>= 1.4.3.0

test-suite test-hashcons
  type: exitcode-stdio-1.0
  main-is: tests.hs
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    hashcons,
    base     ^>= 4.10.1.0,
    hedgehog ^>= 0.5.2,
    deepseq  ^>= 1.4.3.0,
    async    ^>= 2.1.1.1

flag build-examples
  description: Whether to build the example programs
  default: False
  manual: True

executable hashcons-example-expr
  main-is: expr.hs
  hs-source-dirs: examples
  default-language: Haskell2010
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base ^>= 4.10.1.0,
    hashcons
  if !flag(build-examples)
    buildable: False
