cabal-version: 2.2
name: hashcons
version: 0.1.0
category: Caching
synopsis: Hash-consing and memoisation
description:
  Hash-consing (a.k.a. interning) and memoisation, with a mostly-clean
  interface. This library does all the dirty tricks so you don't have to.
license: BSD-3-Clause
license-file: LICENCE.txt

author: Andy Morris <hello@andy-morris.xyz>
maintainer: Andy Morris <hello@andy-morris.xyz>

tested-with:
  GHC == 8.2.2,
  GHC == 8.4.1

homepage: https://github.com/andy-morris/hashcons
bug-reports: https://github.com/andy-morris/hashcons/issues

extra-source-files:
  README.md,
  CHANGELOG.md

source-repository head
  type: git
  location: git://github.com/andy-morris/hashcons.git

common deps
  build-depends:
    base        >= 4.10.1.0 && < 4.12,
    hashable   ^>= 1.2.6.1,
    hashtables ^>= 1.2.2.1,
    deepseq    ^>= 1.4.3.0,
    bytestring ^>= 0.10.8.2,
    text       ^>= 1.2.3.0
  ghc-options: -Wall
  default-language: Haskell2010

common exe
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: hashcons

library
  import: deps
  hs-source-dirs: src
  exposed-modules:
    Data.HashCons,
    Data.HashCons.ConstRef,
    Data.HashCons.MkWeak,
    Data.HashCons.Memo

test-suite test-hashcons
  import: deps, exe
  type: exitcode-stdio-1.0
  main-is: tests.hs
  other-modules:
    TestHashCons,
    TestMemo
  hs-source-dirs: test
  build-depends:
    hedgehog ^>= 0.5.2,
    async     >= 2.1.1.1 && < 2.3

benchmark bench-hashcons-space
  import: deps, exe
  type: exitcode-stdio-1.0
  main-is: bench-space.hs
  other-modules: Expr
  hs-source-dirs: bench
  build-depends:
    unordered-containers ^>= 0.2.9.0,
    weigh                ^>= 0.0.7

benchmark bench-hashcons-time
  import: deps, exe
  type: exitcode-stdio-1.0
  main-is: bench-time.hs
  other-modules: Expr
  hs-source-dirs: bench
  build-depends:
    unordered-containers ^>= 0.2.9.0,
    gauge                ^>= 0.2.1

flag build-examples
  description: Whether to build the example programs
  default: False
  manual: True

executable hashcons-example-expr
  import: deps, exe
  main-is: expr.hs
  hs-source-dirs: examples
  if !flag(build-examples)
    buildable: False
